# Summary_OBS

./: .gitignore  .nojekyll  .pre-commit-config.yaml  2015-survey.html  2015-survey.ipynb  2023-survey.html  2023-survey.ipynb  _quarto.yml  about.html  age.html  age.ipynb  data.ipynb  data2023.py  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: static.yml
_freeze/notebooks/2015/index/execute-results/: html.json
_freeze/notebooks/2023/index/execute-results/: html.json
docs/: about.html  index.html
notebooks/2015/: index.html  index.qmd
notebooks/2015/demographics/: age.html  age.ipynb
notebooks/2015/mode/: access_egress_mode.html  access_egress_mode.ipynb  transit_mode.html  transit_mode.ipynb
notebooks/2023/: index.html  index.qmd
notebooks/2023/demographics/: age.html  age.ipynb
notebooks/2023/mode/: access_egress_mode.html  access_egress_mode.ipynb  transit_mode.html  transit_mode.ipynb
notebooks/2023/route/: transit-mode.html  transit-mode.ipynb
src/obs/data/: obs2015.py  obs2023.py
