[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "obs"
version = "0.1.0"
description = "Package for data, tools, and analytics related to Onboard data."
readme = "README.md"
requires-python = ">=3.12"
# license = {file = "LICENSE.txt"}
# keywords = []
authors = [
    { name = "Timothy Andersen", email = "tandersen@sandag.org" }
]
maintainers = [
    { name = "Timothy Andersen", email = "tandersen@sandag.org" }
]
dependencies = [
    "ipykernel",
    "loguru",
    "nbformat",
    "numpy",
    "openpyxl",
    "pandas",
    "pandera",
    "plotly",
    "toml",
    "typer",
    "quarto",
]
[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[project.urls]
"Reports" = "https://github.com/Summary_OBS"

[project.scripts]
obs="obs.app.main:app"

[tool.setuptools]
#package-data = {"obs" = []}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"